--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div data-controller="comments">
     <h3 class="text-xl mb-2">Comments</h3>
-    <div data-target="comments.commentList" class="mb-4">
+    <div data-comments-target="commentList" class="mb-4">
       <% @project.comments.order(created_at: :desc).each do |comment| %>
         <%= render partial: "comments/show", locals: { comment: comment } %>
       <% end %>
