--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,7 +2,7 @@
   <div>
     <h2 class="text-2xl mb-4"><%= @project.name %></h2>
   </div>
-  <div data-controller="comments">
+  <div data-controller="comments" data-comments-animate-in-class="fade-in-left">
     <h3 class="text-xl mb-2">Comments</h3>
     <div data-comments-target="commentList" class="mb-4">
       <% @project.comments.order(created_at: :desc).each do |comment| %>
